add slide edited

--- a/_posts/0000-01-02-lharris6.md
+++ b/_posts/0000-01-02-lharris6.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-My text
+What did 29 say to Bumblebee?
+I'm *optimistic* prime
 Use the left arrow to go back!
